--- a/app/src/main/res/layout/activity_load_image.xml
+++ b/app/src/main/res/layout/activity_load_image.xml
@@ -30,6 +30,16 @@
         app:layout_constraintTop_toBottomOf="@id/user_img" />
 
     <ImageView
+        android:id="@+id/share_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="15dp"
+        android:src="@drawable/ic_share"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/setImg_handler_img"
         android:layout_width="match_parent"
         android:layout_height="90dp"
